--- a/Workexprience.html
+++ b/Workexprience.html
@@ -37,7 +37,7 @@
         <tr>
             <th class="box">Year</th>
             <th>Job title</th>
-            <th>Company</th>
+            <th>Company123</th>
         </tr>
         <tr>
             <td>2021</td>
